# neptune-optuna

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/e2e/: action.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
neptune_optuna/: __init__.py  _version.py
neptune_optuna/impl/: __init__.py
src/neptune_optuna/: __init__.py  _version.py
src/neptune_optuna/impl/: __init__.py  version.py
tests/: test_e2e.py
